# spicier

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  WORK_LOG.md  WORK_PLAN.md
.claude/: README.md  settings.json
.claude/agents/: loom-architect.md  loom-auditor.md  loom-builder.md  loom-champion.md  loom-curator.md  loom-daemon.md  loom-doctor.md  loom-guide.md  loom-hermit.md  loom-judge.md  loom-shepherd.md
.claude/commands/: builder-pr.md  champion-issue-promo.md  champion-pr-merge.md  champion-reference.md  champion.md  guide.md  imagine.md  judge.md  shepherd-lifecycle.md  shepherd.md
.github/: CONFIGURATION.md  labels.yml
.github/workflows/: ci.yml  label-external-issues.yml
.loom/roles/: builder.md  champion.json  curator.md  doctor.md  judge.json  loom.md
.loom/scripts/: agent-destroy.sh  agent-wait-bg.sh  check-duplicate.sh  check-usage.sh  (+6 more)
crates/spicier-batched-sweep/: Cargo.toml  README.md
crates/spicier-batched-sweep/benches/: sweep_benchmark.rs
crates/spicier-batched-sweep/src/: accelerate_solver.rs  batch_layout.rs  convergence.rs  cuda.rs  error.rs  faer_solver.rs  faer_sparse_solver.rs  lib.rs  metal.rs  mps.rs  parallel.rs  pipeline.rs  rng.rs  solver.rs  spectral.rs  sweep.rs
crates/spicier-parser/: Cargo.toml  README.md
crates/spicier-parser/src/: error.rs  lexer.rs  lib.rs  parser.rs
crates/spicier-parser/src/parser/: commands.rs  elements.rs  mod.rs  subcircuit.rs  types.rs  waveforms.rs
crates/spicier-parser/tests/: ngspice_validation.rs  parse_and_simulate.rs
crates/spicier-parser/tests/golden_data/: README.md  ac_filters.json  dc_bsim3.json  dc_controlled_sources.json  dc_linear.json  transient.json
examples/: diode_ac.sp  diode_circuit.sp  mosfet_amp_ac.sp  mosfet_amp_op.sp  no_print_test.sp  print_test.sp  print_test_ac.sp  rc_pulse.sp  rc_transient.sp
(+126 files in other folders)
