[package]
name = "spicier-batched-sweep"
description = "Unified GPU-accelerated batched sweep solving for CUDA and Metal backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["spice", "gpu", "cuda", "metal", "sweep"]
categories = ["mathematics", "science"]

[features]
default = []
cuda = ["dep:spicier-backend-cuda"]
metal = ["dep:spicier-backend-metal"]
mps = ["dep:spicier-backend-mps"]
faer = ["dep:faer"]
# Apple Accelerate framework (macOS only) - uses direct FFI, no external deps
accelerate = []

[dependencies]
spicier-solver.workspace = true
nalgebra.workspace = true
log.workspace = true
thiserror.workspace = true

# Optional backend dependencies
spicier-backend-cuda = { workspace = true, optional = true }
spicier-backend-metal = { workspace = true, optional = true }
spicier-backend-mps = { workspace = true, optional = true }

# High-performance linear algebra (optimized CPU with SIMD)
faer = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "sweep_benchmark"
harness = false
