[package]
name = "spicier-parser"
description = "SPICE netlist parser for Spicier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spicier-core.workspace = true
spicier-devices.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
spicier-solver.workspace = true
nalgebra.workspace = true
num-complex.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "parser"
harness = false
